<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <TableLayout
        android:paddingTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" >


    <TableRow
        android:id="@+id/tableRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">
        <TextView
            android:id="@+id/levelLabel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal"
            android:text="@string/CurrentLevel"
            android:textSize="20sp"></TextView>

        <TextView
            android:id="@+id/levelShow"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal"
            android:text="Easy"
            android:textSize="20sp"></TextView>

    </TableRow>
    </TableLayout>


    <TableLayout
        android:paddingTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" >
        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            <Button
                android:id="@+id/button0"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginLeft="5dp"
                android:gravity="center"
                android:text="1"
                android:onClick="onButtonClicked"
                android:textSize="50sp" />
            <Button
                android:id="@+id/button1"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginLeft="5dp"
                android:text="2"
                android:onClick="onButtonClicked"
                android:textSize="50sp" />
            <Button
                android:id="@+id/button2"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:text="3"
                android:onClick="onButtonClicked"
                android:textSize="50sp" />
        </TableRow>
        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            <Button
                android:id="@+id/button3"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginLeft="5dp"
                android:text="4"
                android:onClick="onButtonClicked"
                android:textSize="50sp" />
            <Button
                android:id="@+id/button4"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginLeft="5dp"
                android:text="5"
                android:onClick="onButtonClicked"
                android:textSize="50sp" />
            <Button
                android:id="@+id/button5"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginLeft="5dp"
                android:text="6"
                android:onClick="onButtonClicked"
                android:textSize="50sp" />
        </TableRow>
        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            <Button
                android:id="@+id/button6"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginLeft="5dp"
                android:text="7"
                android:onClick="onButtonClicked"
                android:textSize="50sp" />
            <Button
                android:id="@+id/button7"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginLeft="5dp"
                android:text="8"
                android:onClick="onButtonClicked"
                android:textSize="50sp" />
            <Button
                android:id="@+id/button8"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginLeft="5dp"
                android:text="9"
                android:onClick="onButtonClicked"
                android:textSize="50sp" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="432dp"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:id="@+id/information"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="Info"
            android:textSize="20sp"></TextView>

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="5dp">

            <TableRow
                android:id="@+id/resultRow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <TextView
                    android:id="@+id/YouWin"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:gravity="center_horizontal"
                    android:text="@string/YourWinTime"
                    android:textSize="20sp"></TextView>

                <TextView
                    android:id="@+id/yourWinTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center_horizontal"
                    android:text="0"
                    android:textSize="20sp"></TextView>


            </TableRow>
        </TableLayout>

        <TableRow
            android:id="@+id/AndroidRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:id="@+id/androidWin"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:gravity="center_horizontal"
                android:text="@string/AndroidWinTime"
                android:textSize="20sp"></TextView>

            <TextView
                android:id="@+id/androidWinTime"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center_horizontal"
                android:text="0"
                android:textSize="20sp"
                tools:visibility="visible"></TextView>
        </TableRow>

        <TableRow
            android:id="@+id/TieRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:id="@+id/Tie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:gravity="center_horizontal"
                android:text="@string/TieTime"
                android:textSize="20sp"></TextView>

            <TextView
                android:id="@+id/TieTime"
                android:layout_width="24dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:baselineAligned="false"
                android:gravity="center_horizontal"
                android:text="0"
                android:textSize="20sp"></TextView>
        </TableRow>

        <Button
            android:id="@+id/button_restart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:onClick="newGame"
            android:rotationX="-21"
            android:text="@string/Start"
            android:textSize="20sp"></Button>

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="4dp">

            <TableRow
                android:id="@+id/musicRow"
                android:layout_width="361dp"
                android:layout_height="65dp"
                android:layout_gravity="center_horizontal">

                <Button
                    android:id="@+id/bgm"
                    android:layout_width="178dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="4dp"
                    android:onClick="Music"
                    android:rotationX="-21"
                    android:text="@string/bgm"
                    android:textSize="20sp"></Button>

            </TableRow>

        </TableLayout>

        <Button
            android:id="@+id/StopBGM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="4dp"
            android:onClick="Music"
            android:rotationX="-21"
            android:text="@string/StopBGM"
            android:textSize="20sp"></Button>

        <Button
            android:id="@+id/clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="4dp"
            android:rotationX="-21"
            android:text="@string/ResetandRestart"
            android:textSize="20sp"></Button>

        <Button
            android:id="@+id/about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:rotationX="-21"
            android:text="@string/about"
            android:textSize="20sp"></Button>


    </LinearLayout>

</LinearLayout>